Move Content class to subdir.
Avoiding messing up with files, put Content and related classes in its own
directory.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,17 +5,18 @@
 #
 # Copyright (C) 2010 Igalia S.L. All rights reserved.
 
+SUBDIRS = content
+
 lib_LTLIBRARIES		 = libmediastore.la
 
 libmediastore_la_CFLAGS	 = $(DEPS_CFLAGS)
-libmediastore_la_LIBADD	 = $(DEPS_LIBS)
+libmediastore_la_LIBADD	 = $(DEPS_LIBS) content/libcontent.la
 
 libmediastore_la_SOURCES = \
 	media-plugin.c media-plugin.h media-plugin-priv.h \
 	plugin-registry.c plugin-registry.h \
 	metadata-source.c metadata-source.h \
-	media-source.c media-source.h \
-	content.c content.h
+	media-source.c media-source.h
 
 noinst_HEADERS = \
 	media-plugin-priv.h
