--- a/src/content/Makefile.am
+++ b/src/content/Makefile.am
@@ -11,8 +11,8 @@ libcontent_la_CFLAGS	 = $(DEPS_CFLAGS)
 libcontent_la_LIBADD	 = $(DEPS_LIBS)
 
 libcontent_la_SOURCES = \
-	content.c content.h \
-	content-media.c content-media.h
+	ms-content.c ms-content.h \
+	ms-content-media.c ms-content-media.h
 
 MAINTAINERCLEANFILES	 = \
 	*.in \
