Added uninstalled pkg-config support. Fixed config.h includes

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,7 @@ libmediastore_la_CFLAGS	 = $(DEPS_CFLAGS)
 libmediastore_la_LIBADD	 = $(DEPS_LIBS) content/libcontent.la
 
 libmediastore_la_SOURCES = \
+	ms-media-store.h \
 	ms-media-plugin.c ms-media-plugin.h ms-media-plugin-priv.h \
 	ms-plugin-registry.c ms-plugin-registry.h \
 	ms-metadata-key.c ms-metadata-key.h \
