Add MsContentBox to store multiple items, like a list.

--- a/src/content/Makefile.am
+++ b/src/content/Makefile.am
@@ -14,7 +14,8 @@ libcontent_la_SOURCES = \
 	ms-content.c ms-content.h \
 	ms-content-media.c ms-content-media.h \
 	ms-content-audio.c ms-content-audio.h \
-	ms-content-video.c ms-content-video.h
+	ms-content-video.c ms-content-video.h \
+	ms-content-box.c ms-content-box.h
 
 MAINTAINERCLEANFILES	 = \
 	*.in \
