Install plugins into separated directory.

--- a/configure.ac
+++ b/configure.ac
@@ -77,8 +77,12 @@ PKG_CHECK_MODULES(DEPS, glib-2.0 \
 AC_SUBST(DEPS_CFLAGS)
 AC_SUBST(DEPS_LIBS)
 
-PKG_CHECK_MODULES(VFS, gnome-vfs-2.0)
+PLUGINS_DIR="${prefix}/lib/ms-plugins"
+AC_SUBST(PLUGINS_DIR)
 
+# Plugins requirements
+
+PKG_CHECK_MODULES(VFS, gnome-vfs-2.0, HAVE_VFS=yes, HAVE_VFS=no)
 AC_SUBST(VFS_CFLAGS)
 AC_SUBST(VFS_LIBS)
 
