Use plugins dir as default value for MS_PLUGIN_PATH.

--- a/configure.ac
+++ b/configure.ac
@@ -77,8 +77,17 @@ PKG_CHECK_MODULES(DEPS, glib-2.0 \
 AC_SUBST(DEPS_CFLAGS)
 AC_SUBST(DEPS_LIBS)
 
-PLUGINS_DIR="${prefix}/lib/ms-plugins"
+if test $prefix = "NONE" ; then
+	prefix="/usr/local"
+fi
+
+if test $libdir = "\${exec_prefix}/lib" ; then
+	libdir="$prefix/lib"
+fi
+
+PLUGINS_DIR="${libdir}/ms-plugins"
 AC_SUBST(PLUGINS_DIR)
+AC_DEFINE_UNQUOTED(PLUGINS_DIR, "$PLUGINS_DIR", [Plugins directory])
 
 # Plugins requirements
 
