Install header files

--- a/src/content/Makefile.am
+++ b/src/content/Makefile.am
@@ -10,13 +10,23 @@ lib_LTLIBRARIES		 = libcontent.la
 libcontent_la_CFLAGS	 = $(DEPS_CFLAGS)
 libcontent_la_LIBADD	 = $(DEPS_LIBS)
 
-libcontent_la_SOURCES = \
-	ms-content.c ms-content.h \
-	ms-content-media.c ms-content-media.h \
-	ms-content-audio.c ms-content-audio.h \
-	ms-content-video.c ms-content-video.h \
-        ms-content-image.c ms-content-image.h \
-	ms-content-box.c ms-content-box.h
+libcontent_la_SOURCES =		\
+	ms-content.c		\
+	ms-content-media.c	\
+	ms-content-audio.c	\
+	ms-content-video.c	\
+        ms-content-image.c	\
+	ms-content-box.c
+
+libcontentincdir = $(includedir)/$(PACKAGE_NAME)
+
+libcontentinc_HEADERS =		\
+	ms-content.h		\
+	ms-content-media.h	\
+	ms-content-box.h	\
+	ms-content-audio.h	\
+	ms-content-video.h	\
+	ms-content-image.h
 
 MAINTAINERCLEANFILES	 = \
 	*.in \
