--- a/tools/test-ui/Makefile.am
+++ b/tools/test-ui/Makefile.am
@@ -21,7 +21,7 @@ test_ui_LDADD =		\
 	-ldl -lpthread	\
 	$(DEPS_LIBS)	\
 	$(GTK_LIBS)	\
-	$(top_builddir)/src/libmedia-store.la
+	$(top_builddir)/src/libmedia-store-@MS_MAJORMINOR@.la
 
 MAINTAINERCLEANFILES =	\
 	*.in		\
