--- a/src/content/Makefile.am
+++ b/src/content/Makefile.am
@@ -21,7 +21,7 @@ libcontent_la_SOURCES =		\
         ms-content-image.c	\
 	ms-content-box.c
 
-libcontentincdir = $(includedir)/$(PACKAGE_NAME)-@MS_MAJORMINOR@
+libcontentincdir = $(includedir)/@PACKAGE_NAME@-@MS_MAJORMINOR@
 
 libcontentinc_HEADERS =		\
 	ms-content.h		\
