Add pkgconfig file

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,9 @@
 
 SUBDIRS = src tools
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = media-store-0.1.pc
+
 MAINTAINERCLEANFILES = \
         aclocal.m4 \
         compile \
