--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,10 @@ SUBDIRS = content
 
 lib_LTLIBRARIES = lib@PACKAGE_NAME@-@MS_MAJORMINOR@.la
 
-lib@PACKAGE_NAME@_@MS_MAJORMINOR@_la_CFLAGS = $(DEPS_CFLAGS)
+lib@PACKAGE_NAME@_@MS_MAJORMINOR@_la_CFLAGS =	\
+	$(DEPS_CFLAGS)				\
+	-I.					\
+	-I./content
 
 lib@PACKAGE_NAME@_@MS_MAJORMINOR@_la_LIBADD =	\
 	$(DEPS_LIBS)				\
