--- a/media-store-0.1.pc.in
+++ b/media-store-0.1.pc.in
@@ -1,13 +1,13 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@/@PACKAGE_NAME@-@MS_MAJORMINOR@
+includedir=@includedir@/@MS_NAME@
 plugindir=@PLUGINS_DIR@
 
 Name: Media Store
 Description: Media Store for media developers
 Version: @VERSION@
-Libs: -L${libdir} -l@PACKAGE_NAME@-@MS_MAJORMINOR@
+Libs: -L${libdir} -l@MS_NAME@
 Cflags: -I${includedir}
 Requires: gobject-2.0
 Requires.Private:
