--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,41 +7,41 @@
 
 SUBDIRS = content
 
-lib_LTLIBRARIES = lib@MS_NAME@.la
+lib_LTLIBRARIES = lib@GRL_NAME@.la
 
-lib@MS_NAME@_la_CFLAGS =	\
+lib@GRL_NAME@_la_CFLAGS =	\
 	$(DEPS_CFLAGS)		\
 	-I$(srcdir)		\
 	-I$(srcdir)/content
 
-lib@MS_NAME@_la_LIBADD =	\
+lib@GRL_NAME@_la_LIBADD =	\
 	$(DEPS_LIBS)		\
 	$(builddir)/content/libcontent.la
 
-lib@MS_NAME@_la_SOURCES =				\
-	ms-media-plugin.c ms-media-plugin-priv.h	\
-	ms-plugin-registry.c				\
-	ms-metadata-key.c				\
-	ms-metadata-source.c ms-metadata-source-priv.h	\
-	ms-media-source.c				\
-	ms-log.c
+lib@GRL_NAME@_la_SOURCES =					\
+	grl-media-plugin.c grl-media-plugin-priv.h		\
+	grl-plugin-registry.c					\
+	grl-metadata-key.c					\
+	grl-metadata-source.c grl-metadata-source-priv.h	\
+	grl-media-source.c					\
+	grl-log.c
 
-lib@MS_NAME@incdir =	\
-	$(includedir)/@MS_NAME@
+lib@GRL_NAME@incdir =	\
+	$(includedir)/@GRL_NAME@
 
-lib@MS_NAME@inc_HEADERS =	\
-	media-store.h		\
-	ms-error.h		\
-	ms-media-plugin.h	\
-	ms-plugin-registry.h	\
-	ms-metadata-key.h	\
-	ms-metadata-source.h	\
-	ms-media-source.h	\
-	ms-log.h
+lib@GRL_NAME@inc_HEADERS =	\
+	grilo.h			\
+	grl-error.h		\
+	grl-media-plugin.h	\
+	grl-plugin-registry.h	\
+	grl-metadata-key.h	\
+	grl-metadata-source.h	\
+	grl-media-source.h	\
+	grl-log.h
 
 noinst_HEADERS =		\
-	ms-media-plugin-priv.h	\
-	ms-metadata-source-priv.h
+	grl-media-plugin-priv.h	\
+	grl-metadata-source-priv.h
 
 MAINTAINERCLEANFILES =	\
 	*.in		\
