--- a/grilo-0.1-uninstalled.pc.in
+++ b/grilo-0.1-uninstalled.pc.in
@@ -8,7 +8,7 @@ Name: Grilo Framework
 Description: Grilo Framework for multimedia developers, Not Installed
 Version: @VERSION@
 Libs: ${libdir}/lib@GRL_NAME@.la
-Cflags: -I${includedir}
+Cflags: -I${includedir} -I${includedir}/content
 Requires: gobject-2.0
 Requires.Private:
 
