[vala] make distcheck compliant
Add missing EXTRA_DIST autoconf-fu kata for vala tool compilation

--- a/tools/vala/Makefile.am
+++ b/tools/vala/Makefile.am
@@ -31,6 +31,8 @@ grilo_simple_playlist_LDADD = 		\
 	$(DEP_LIBS)			\
 	$(top_builddir)/src/lib@GRL_NAME@.la
 
+EXTRA_DIST = $(grilo_simple_playlist_VALASOURCES) vala.stamp
+
 MAINTAINERCLEANFILES =  \
         *.in            \
         *~
