--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,7 @@ include /usr/share/cdbs/1/class/autotools.mk
 
 DEB_CONFIGURE_SCRIPT := ./autogen.sh
 
-DEB_CONFIGURE_EXTRA_FLAGS :=		\
-	--enable-vala
+DEB_CONFIGURE_EXTRA_FLAGS :=	\
+	--enable-vala		\
+	--disable-gtk-doc
 
