--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,8 @@ Source: @GRL_NAME@
 Section: libs
 Priority: extra
 Maintainer: Juan A. Suarez Romero <jasuarez@igalia.com>
-Build-Depends: cdbs, debhelper (>= 5), gnome-common, libvala-dev (>= 0.3.4)
+Build-Depends: cdbs, debhelper (>= 5), gnome-common, libvala-dev (>= 0.7.2)
+ valac (>= 0.7.2), gtk-doc-tools
 Standards-Version: 3.7.2
 Homepage: http://gitorious.org/grilo
 
@@ -20,7 +21,7 @@ Package: lib@GRL_NAME@-dbg
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, lib@GRL_NAME@
 Description: Grilo framework debugging symbos
- Media-Store is a framework that provides access to different sources of
+ Grilo is a framework that provides access to different sources of
  multimedia content, using a pluggable system.
  .
  This package contains unstripped shared libraries, useful to debug.
@@ -29,7 +30,7 @@ Package: lib@GRL_NAME@-dev
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, lib@GRL_NAME@
 Description: Grilo framework development files
- Media-Store is a framework that provides access to different sources of
+ Grilo is a framework that provides access to different sources of
  multimedia content, using a pluggable system.
  .
  This package contains development files for the core library and elements.
