Add Vala bindings package
Install Vala bindings in a new package.

--- a/configure.ac
+++ b/configure.ac
@@ -172,6 +172,7 @@ AC_CONFIG_FILES([
   doc/Makefile
   doc/reference/Makefile
   debian/libgrilo-0.1-dev.install
+  debian/libgrilo-0.1-vala.install
   debian/libgrilo-0.1.install
 ])
 
