Add documentation package
Package gtk-doc documentation in its own package.

--- a/configure.ac
+++ b/configure.ac
@@ -173,6 +173,8 @@ AC_CONFIG_FILES([
   doc/reference/Makefile
   debian/libgrilo-0.1-dev.install
   debian/libgrilo-0.1-vala.install
+  debian/libgrilo-0.1-doc.install
+  debian/libgrilo-0.1-doc.links
   debian/libgrilo-0.1.install
 ])
 
