--- a/debian/control.in
+++ b/debian/control.in
@@ -35,6 +35,17 @@ Description: Grilo framework development files
  .
  This package contains development files for the core library and elements.
 
+Package: lib@GRL_NAME@-doc
+Section: doc
+Architecture: all
+Depends: ${misc:Depends}
+Suggests: devhelp
+Description: Grilo framework documentation
+ Grilo is a framework that provides access to different sources of
+ multimedia content, using a pluggable system.
+ .
+ This package contains the documentation.
+
 Package: lib@GRL_NAME@-vala
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, lib@GRL_NAME@, valac (>= 0.7.2)
