--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,18 +5,18 @@
 #
 # Copyright (C) 2010 Igalia S.L. All rights reserved.
 
-SUBDIRS = content
+SUBDIRS = data
 
 lib_LTLIBRARIES = lib@GRL_NAME@.la
 
 lib@GRL_NAME@_la_CFLAGS =	\
 	$(DEPS_CFLAGS)		\
 	-I$(srcdir)		\
-	-I$(srcdir)/content
+	-I$(srcdir)/data
 
 lib@GRL_NAME@_la_LIBADD =	\
 	$(DEPS_LIBS)		\
-	$(builddir)/content/libcontent.la
+	$(builddir)/data/libdata.la
 
 lib@GRL_NAME@_la_SOURCES =					\
 	grl-media-plugin.c grl-media-plugin-priv.h		\
