--- a/tools/grilo-test-ui/Makefile.am
+++ b/tools/grilo-test-ui/Makefile.am
@@ -16,7 +16,7 @@ grilo_test_ui_CFLAGS =		\
 	-DPREFIX=$(prefix)	\
 	$(GTK_CFLAGS)		\
 	-I$(top_srcdir)/src	\
-	-I$(top_srcdir)/src/content
+	-I$(top_srcdir)/src/data
 
 grilo_test_ui_LDADD =	\
 	-ldl -lpthread	\
